--- a/5_RegionalManagement.Rmd
+++ b/5_RegionalManagement.Rmd
@@ -1,3 +1,3 @@
 <!-- **************************REGIONAL MANAGEMENT************************* -->
 #Regional Management Considerations
-The distribution of `r spp` occur primarily in the US west coast waters of Washington, Oregon, and northern California and hes is currently managed to a species level with harvest limits set for the stock north of the $40^\circ 10^\prime$ latitude.  The population within this area is treated as a single stock due to the lack of biological and genetic data indicating the presence of multiple stocks.  Analysis conducted within this assessment did not find support for regional management within the area that `r spp` occur.  
+The distribution of `r spp` occur primarily in the US west coast waters of Washington, Oregon, and northern California and is currently managed to a species level with harvest limits set for the stock north of the $40^\circ 10^\prime$ latitude.  The population within this area is treated as a single stock due to the lack of biological and genetic data indicating the presence of multiple stocks.  Analysis conducted within this assessment did not find support for regional management within the area that `r spp` occur.  
